Gaim: The Pimpin' Penguin IM Clone that's good for the soul!

version 0.71
	* Display AIM away messages in the tooltip for buddies when 
	  they are away.
	* Re-write of Jabber protocol plugin
	* SSL support can now be provided by third party plugins.

version 0.70 (09/28/2003):
	* Implemented Yahoo's new authentication method (Cerulean Studios)
	* Protocol plugins that have plugin dependencies now load correctly.
	* Perl installs where it's told to a bit more correctly.
	* Robert "Robot101" McQueen cleaned and core/UI split IM
	  image support.
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Portuguese (Portugal) translation updated (Duarte Henriques)

version 0.69 (09/24/2003):
	* Added Contact (aka Person, aka Meta-Contact, aka Buddy Merging, etc)
	  support
	* Added MSN 6 smileys.
	* Added animated smiley support (Ka-Hing Cheung)
	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
	* Added plugin IPC.
	* Added support for gettext 0.12.x.
	* Updated MSN support to the MSN Protocol version 9.
	* Jabber now supports SSL
	* Yahoo now shows people using the java chat client (Tim Ringenbach)
	* Yahoo chat and conference (Tim Ringenbach)
	* Yahoo ignore support (Jesse Farmer (farmerje))
	* Yahoo idle times displayed, long buddy lists work, sms users,
	  and other improvements (Tim Ringenbach)
	* The accounts window now shows offline accounts as greyed out, and
	  online accounts as colored.
	* Fixed the text replacement plugin.
	* Fixed all known signal problems in perl.
	* The right-click menu for conversation tabs now shows the tab icon
	  and status, if tab icons are enabled. (Jesse Farmer)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li, Paladin R.
	  Liu (prliu))
	* Czech translation updated (Miloslav Trmac)
	* Danish translation updated (Morten Brix Pedersen (mbrix))
	* Dutch translation updated (Vincent van Adrighem)